Fixed Button Spacing

--- a/application/static/css/home.css
+++ b/application/static/css/home.css
@@ -29,7 +29,7 @@
 
 .home-div-buttons{
     width: 75%;
-    max-width: 800px;
+    max-width: 600px;
 }
 
 .about-div {
